// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeSummaryBar failure only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    aria-label="3 Failed"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      aria-hidden="true"
      className="fail"
    >
      <CrossIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    aria-label="0 Passed"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="pass"
    >
      <CheckIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    aria-label="0 Not applicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar failures + not applicable + passes 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    aria-label="3 Failed"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      aria-hidden="true"
      className="fail"
    >
      <CrossIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    aria-label="2 Passed"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      aria-hidden="true"
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    aria-label="3 Not applicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      aria-hidden="true"
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar failures + not applicable only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    aria-label="3 Failed"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      aria-hidden="true"
      className="fail"
    >
      <CrossIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    aria-label="0 Passed"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="pass"
    >
      <CheckIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    aria-label="3 Not applicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      aria-hidden="true"
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar failures + passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    aria-label="3 Failed"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      aria-hidden="true"
      className="fail"
    >
      <CrossIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    aria-label="2 Passed"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      aria-hidden="true"
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    aria-label="0 Not applicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar not applicable + passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    aria-label="0 Failed"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="fail"
    >
      <CrossIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    aria-label="2 Passed"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      aria-hidden="true"
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    aria-label="3 Not applicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      aria-hidden="true"
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar not applicable only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    aria-label="0 Failed"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="fail"
    >
      <CrossIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    aria-label="2 Passed"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      aria-hidden="true"
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    aria-label="0 Not applicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    aria-label="0 Failed"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="fail"
    >
      <CrossIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    aria-label="2 Passed"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      aria-hidden="true"
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    aria-label="0 Not applicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      aria-hidden="true"
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;
